add POST /bff/v2/departures/quay-departures endpoint
