# src/api/departures/schema.ts
@@ -55,6 +55,27 @@ export const getQuayDeparturesRequest = {
   })
 };
 
+export const postQuayDeparturesRequest = {
+  payload: Joi.object({
+    favorites: Joi.array()
+      .single()
+      .items(
+        Joi.object({
+          stopId: Joi.string().required(),
+          lineName: Joi.string(),
+          lineId: Joi.string().required(),
+          quayId: Joi.string()
+        }).options({ stripUnknown: true })
+      )
+  }),
+  query: Joi.object({
+    id: Joi.string().required(),
+    numberOfDepartures: Joi.number().default(1000),
+    startTime: Joi.string(),
+    timeRange: Joi.number().default(86400)
+  })
+};
+
 export const getDepartureRealtime = {
   query: Joi.object({
     quayIds: Joi.array().items(Joi.string()).default([]).single(),
