# swagger.yaml
@@ -662,7 +662,7 @@ paths:
         - in: body
           name: body
           schema:
-            $ref: '#/definitions/favorites'
+            $ref: '#/definitions/departuresPayload'
       tags:
         - bff
       responses:
@@ -699,6 +699,38 @@ paths:
           schema:
             type: string
           description: Successful
+    post:
+      summary: Get departures from a quay
+      operationId: postBffV2QuayDepartures
+      parameters:
+        - type: string
+          name: id
+          in: query
+          required: true
+        - type: number
+          name: numberOfDepartures
+          default: 1000
+          in: query
+        - type: string
+          format: date
+          name: startTime
+          in: query
+        - type: number
+          name: timeRange
+          default: 86400
+          in: query
+        - in: body
+          name: body
+          schema:
+            $ref: '#/definitions/departuresPayload'
+      tags:
+        - bff
+      responses:
+        default:
+          schema:
+            type: string
+          description: Successful
+
   /bff/v2/departures/realtime:
     get:
       summary: Get updated realtime information for the given quays
@@ -815,6 +847,36 @@ definitions:
         $ref: '#/definitions/favorites'
     required:
       - location
+  departuresPayload:
+    type: object
+    properties:
+      favorites:
+        $ref: '#/definitions/favoritesV2'
+    required:
+      - location
+  favoritesV2:
+    type: array
+    items:
+      $ref: '#/definitions/favoriteV2'
+  favoriteV2:
+    type: object
+    properties:
+      stopId:
+        type: string
+        example: "NSR:StopPlace:41613"
+      lineName:
+        type: string
+        example: "Lund via Kolstad-Heimdal"
+      lineId:
+        type: string
+        example: "ATB:Line:2_2"
+      quayId:
+        type: string
+        example: "NSR:Quay:71184"
+    required:
+      - stopId
+      - lineName
+      - lineId
   from:
     type: object
     properties:
